--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -53,11 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kings_County_Real_Estate_Sales.csv README.md\n",
+      "LICENSE                            data_analysis.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "# This will only work on Mac, Linux, or a separate bash terminal in Windows\n",
     "\n",
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExciseTaxNbr,Major,Minor,DocumentDate,SalePrice,RecordingNbr,Volume,Page,PlatNbr,PlatType,PlatLot,PlatBlock,SellerName,BuyerName,PropertyType,PrincipalUse,SaleInstrument,AFForestLand,AFCurrentUseLand,AFNonProfitUse,AFHistoricProperty,SaleReason,PropertyClass,SaleWarning\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This code prints the first line of the CSV file\n",
     "\n",
@@ -119,9 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2687551,138860,110,08/21/2014,245000,20140828001436,   ,   ,      , ,              ,       ,WENKLE NOEL SMITH -TRUSTEE                        ,ALEXANDER APRIL                                   ,3,6,3,N,N,N,N,1,8, \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This code prints the second line of the CSV file\n",
     "\n",
@@ -141,11 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExciseTaxNbr,Major,Minor,DocumentDate,SalePrice,RecordingNbr,Volume,Page,PlatNbr,PlatType,PlatLot,PlatBlock,SellerName,BuyerName,PropertyType,PrincipalUse,SaleInstrument,AFForestLand,AFCurrentUseLand,AFNonProfitUse,AFHistoricProperty,SaleReason,PropertyClass,SaleWarning\n",
+      "2687551,138860,110,08/21/2014,245000,20140828001436,   ,   ,      , ,              ,       ,WENKLE NOEL SMITH -TRUSTEE                        ,ALEXANDER APRIL                                   ,3,6,3,N,N,N,N,1,8, \n"
+     ]
+    }
+   ],
    "source": [
     "# This will only work on Mac, Linux, or a separate bash terminal in Windows\n",
     "\n",
@@ -172,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ExciseTaxNbr': '2687551', 'Major': '138860', 'Minor': '110', 'DocumentDate': '08/21/2014', 'SalePrice': '245000', 'RecordingNbr': '20140828001436', 'Volume': '   ', 'Page': '   ', 'PlatNbr': '      ', 'PlatType': ' ', 'PlatLot': '              ', 'PlatBlock': '       ', 'SellerName': 'WENKLE NOEL SMITH -TRUSTEE                        ', 'BuyerName': 'ALEXANDER APRIL                                   ', 'PropertyType': '3', 'PrincipalUse': '6', 'SaleInstrument': '3', 'AFForestLand': 'N', 'AFCurrentUseLand': 'N', 'AFNonProfitUse': 'N', 'AFHistoricProperty': 'N', 'SaleReason': '1', 'PropertyClass': '8', 'SaleWarning': ' '}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print OrderedDict from first row of CSV file \n",
     "\n",
@@ -208,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,9 +266,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ExciseTaxNbr': '2687551',\n",
+       "  'Major': '138860',\n",
+       "  'Minor': '110',\n",
+       "  'DocumentDate': '08/21/2014',\n",
+       "  'SalePrice': '245000',\n",
+       "  'RecordingNbr': '20140828001436',\n",
+       "  'Volume': '   ',\n",
+       "  'Page': '   ',\n",
+       "  'PlatNbr': '      ',\n",
+       "  'PlatType': ' ',\n",
+       "  'PlatLot': '              ',\n",
+       "  'PlatBlock': '       ',\n",
+       "  'SellerName': 'WENKLE NOEL SMITH -TRUSTEE                        ',\n",
+       "  'BuyerName': 'ALEXANDER APRIL                                   ',\n",
+       "  'PropertyType': '3',\n",
+       "  'PrincipalUse': '6',\n",
+       "  'SaleInstrument': '3',\n",
+       "  'AFForestLand': 'N',\n",
+       "  'AFCurrentUseLand': 'N',\n",
+       "  'AFNonProfitUse': 'N',\n",
+       "  'AFHistoricProperty': 'N',\n",
+       "  'SaleReason': '1',\n",
+       "  'PropertyClass': '8',\n",
+       "  'SaleWarning': ' '},\n",
+       " {'ExciseTaxNbr': '3080093',\n",
+       "  'Major': '82204',\n",
+       "  'Minor': '9037',\n",
+       "  'DocumentDate': '10/27/2020',\n",
+       "  'SalePrice': '0',\n",
+       "  'RecordingNbr': '20201102000765',\n",
+       "  'Volume': '   ',\n",
+       "  'Page': '   ',\n",
+       "  'PlatNbr': '      ',\n",
+       "  'PlatType': ' ',\n",
+       "  'PlatLot': '              ',\n",
+       "  'PlatBlock': '       ',\n",
+       "  'SellerName': 'BALA RAJNI                                        ',\n",
+       "  'BuyerName': 'SINGH JOGA+BALA RAJNI                             ',\n",
+       "  'PropertyType': '11',\n",
+       "  'PrincipalUse': '6',\n",
+       "  'SaleInstrument': '15',\n",
+       "  'AFForestLand': 'N',\n",
+       "  'AFCurrentUseLand': 'N',\n",
+       "  'AFNonProfitUse': 'N',\n",
+       "  'AFHistoricProperty': 'N',\n",
+       "  'SaleReason': '18',\n",
+       "  'PropertyClass': '8',\n",
+       "  'SaleWarning': '18 51'},\n",
+       " {'ExciseTaxNbr': '1235111',\n",
+       "  'Major': '664885',\n",
+       "  'Minor': '40',\n",
+       "  'DocumentDate': '07/09/1991',\n",
+       "  'SalePrice': '0',\n",
+       "  'RecordingNbr': '199203161090  ',\n",
+       "  'Volume': '071',\n",
+       "  'Page': '001',\n",
+       "  'PlatNbr': '664885',\n",
+       "  'PlatType': 'C',\n",
+       "  'PlatLot': 'B102          ',\n",
+       "  'PlatBlock': '       ',\n",
+       "  'SellerName': 'HERRMAN JEFFREY A+PAULINE A                       ',\n",
+       "  'BuyerName': 'HERRMAN PAULINE A TTEE                            ',\n",
+       "  'PropertyType': '3',\n",
+       "  'PrincipalUse': '0',\n",
+       "  'SaleInstrument': '26',\n",
+       "  'AFForestLand': 'N',\n",
+       "  'AFCurrentUseLand': 'N',\n",
+       "  'AFNonProfitUse': 'N',\n",
+       "  'AFHistoricProperty': 'N',\n",
+       "  'SaleReason': '18',\n",
+       "  'PropertyClass': '3',\n",
+       "  'SaleWarning': '11'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales[0:3]"
    ]
@@ -240,9 +366,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ExciseTaxNbr': '2687551',\n",
+       " 'Major': '138860',\n",
+       " 'Minor': '110',\n",
+       " 'DocumentDate': '08/21/2014',\n",
+       " 'SalePrice': '245000',\n",
+       " 'RecordingNbr': '20140828001436',\n",
+       " 'Volume': '   ',\n",
+       " 'Page': '   ',\n",
+       " 'PlatNbr': '      ',\n",
+       " 'PlatType': ' ',\n",
+       " 'PlatLot': '              ',\n",
+       " 'PlatBlock': '       ',\n",
+       " 'SellerName': 'WENKLE NOEL SMITH -TRUSTEE                        ',\n",
+       " 'BuyerName': 'ALEXANDER APRIL                                   ',\n",
+       " 'PropertyType': '3',\n",
+       " 'PrincipalUse': '6',\n",
+       " 'SaleInstrument': '3',\n",
+       " 'AFForestLand': 'N',\n",
+       " 'AFCurrentUseLand': 'N',\n",
+       " 'AFNonProfitUse': 'N',\n",
+       " 'AFHistoricProperty': 'N',\n",
+       " 'SaleReason': '1',\n",
+       " 'PropertyClass': '8',\n",
+       " 'SaleWarning': ' '}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales[0]"
    ]
@@ -265,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +439,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ExciseTaxNbr': '2687551',\n",
+       " 'Major': '138860',\n",
+       " 'Minor': '110',\n",
+       " 'DocumentDate': '08/21/2014',\n",
+       " 'SalePrice': '245000',\n",
+       " 'RecordingNbr': '20140828001436',\n",
+       " 'Volume': '   ',\n",
+       " 'Page': '   ',\n",
+       " 'PlatNbr': '      ',\n",
+       " 'PlatType': ' ',\n",
+       " 'PlatLot': '              ',\n",
+       " 'PlatBlock': '       ',\n",
+       " 'SellerName': 'WENKLE NOEL SMITH -TRUSTEE                        ',\n",
+       " 'BuyerName': 'ALEXANDER APRIL                                   ',\n",
+       " 'PropertyType': '3',\n",
+       " 'PrincipalUse': '6',\n",
+       " 'SaleInstrument': '3',\n",
+       " 'AFForestLand': 'N',\n",
+       " 'AFCurrentUseLand': 'N',\n",
+       " 'AFNonProfitUse': 'N',\n",
+       " 'AFHistoricProperty': 'N',\n",
+       " 'SaleReason': '1',\n",
+       " 'PropertyClass': '8',\n",
+       " 'SaleWarning': ' ',\n",
+       " 'sale_price': 245000}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales[0]"
    ]
@@ -322,18 +517,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Your work here\n"
+    "## Your work here\n",
+    "for sale in sales:\n",
+    "    year = int (sale[\"DocumentDate\"][-4:])\n",
+    "    month = int (sale [\"DocumentDate\"][:2])\n",
+    "\n",
+    "    sale['sale_year']= year\n",
+    "    sale['sale_month']= month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ExciseTaxNbr': '2687551',\n",
+       " 'Major': '138860',\n",
+       " 'Minor': '110',\n",
+       " 'DocumentDate': '08/21/2014',\n",
+       " 'SalePrice': '245000',\n",
+       " 'RecordingNbr': '20140828001436',\n",
+       " 'Volume': '   ',\n",
+       " 'Page': '   ',\n",
+       " 'PlatNbr': '      ',\n",
+       " 'PlatType': ' ',\n",
+       " 'PlatLot': '              ',\n",
+       " 'PlatBlock': '       ',\n",
+       " 'SellerName': 'WENKLE NOEL SMITH -TRUSTEE                        ',\n",
+       " 'BuyerName': 'ALEXANDER APRIL                                   ',\n",
+       " 'PropertyType': '3',\n",
+       " 'PrincipalUse': '6',\n",
+       " 'SaleInstrument': '3',\n",
+       " 'AFForestLand': 'N',\n",
+       " 'AFCurrentUseLand': 'N',\n",
+       " 'AFNonProfitUse': 'N',\n",
+       " 'AFHistoricProperty': 'N',\n",
+       " 'SaleReason': '1',\n",
+       " 'PropertyClass': '8',\n",
+       " 'SaleWarning': ' ',\n",
+       " 'sale_price': 245000,\n",
+       " 'sale_year': 2014,\n",
+       " 'sale_month': 8}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales[0]"
    ]
@@ -364,11 +602,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1958\n",
+      "2021\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your work here\n"
+    "## Your work here\n",
+    "sale_years = [sale['sale_year'] for sale in sales]\n",
+    "print(min(sale_years))\n",
+    "print(max(sale_years))"
    ]
   },
   {
@@ -389,11 +639,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "419"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your work here\n"
+    "## Your work here\n",
+    "sale_years = [sale['sale_year'] for sale in sales]\n",
+    "sale_years_2020 = [year for year in sale_years if year == 2020]\n",
+    "len (sale_years_2020)"
    ]
   },
   {
@@ -412,11 +676,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3575874.61575179"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your work here\n"
+    "## Your work here\n",
+    "sale_prices_2020 = [sale['sale_price'] for sale in sales if sale['sale_year'] == 2020]\n",
+    "sum(sale_prices_2020)/len(sale_prices_2020)"
    ]
   },
   {
@@ -440,11 +717,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1958 1\n",
+      "1966 1\n",
+      "1974 1\n",
+      "1976 1\n",
+      "1979 1\n",
+      "1981 2\n",
+      "1982 32\n",
+      "1983 36\n",
+      "1984 48\n",
+      "1985 44\n",
+      "1986 74\n",
+      "1987 77\n",
+      "1988 66\n",
+      "1989 75\n",
+      "1990 68\n",
+      "1991 81\n",
+      "1992 338\n",
+      "1993 353\n",
+      "1994 267\n",
+      "1995 246\n",
+      "1996 347\n",
+      "1997 306\n",
+      "1998 349\n",
+      "1999 406\n",
+      "2000 279\n",
+      "2001 342\n",
+      "2002 325\n",
+      "2003 380\n",
+      "2004 447\n",
+      "2005 442\n",
+      "2006 389\n",
+      "2007 319\n",
+      "2008 231\n",
+      "2009 264\n",
+      "2010 230\n",
+      "2011 218\n",
+      "2012 364\n",
+      "2013 295\n",
+      "2014 299\n",
+      "2015 376\n",
+      "2016 290\n",
+      "2017 288\n",
+      "2018 281\n",
+      "2019 241\n",
+      "2020 419\n",
+      "2021 61\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your work here\n"
+    "## Your work here\n",
+    "sale_year_count = []\n",
+    "\n",
+    "sale_years = [sale ['sale_year']for sale in sales]\n",
+    "unique_sale_years = set(sale_years)\n",
+    "for unique_year in unique_sale_years:\n",
+    "    num_sales = len ([year for year in sale_years if year == unique_year])\n",
+    "    sale_year_count.append((unique_year, num_sales))\n",
+    "    print (unique_year, num_sales)"
    ]
   },
   {
@@ -463,18 +801,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# create a figure and one plot\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m fig, ax \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39msubplots(nrows\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, ncols\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m5\u001b[39m))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# place data in a bar chart \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# where the x-axis is each year and \u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# the y-axis is the number of sales per year\u001b[39;00m\n\u001b[1;32m      7\u001b[0m ax\u001b[38;5;241m.\u001b[39mbar(x\u001b[38;5;241m=\u001b[39m[sale[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m sale \u001b[38;5;129;01min\u001b[39;00m sale_year_count],\n\u001b[1;32m      8\u001b[0m        height\u001b[38;5;241m=\u001b[39m[sale[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m sale \u001b[38;5;129;01min\u001b[39;00m sale_year_count])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# create a figure and one plot\n",
     "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(10, 5))\n",
@@ -601,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.12.1"
   },
   "toc": {
    "base_numbering": 1,
